Shifts | Fix mobile display UI

--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  font-size: 120%;
+  font-size: 110%;
 }
 
 .firebase-emulator-warning {
